kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpha-automl-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
    # The following 2 lines redirect HTTP traffic to HTTPS for you
    haproxy.org/ssl-redirect: "true"
    haproxy.org/ssl-redirect-code: "301"
    # The following line record the user's IP address in the 'X-Forwarded-For' header
    haproxy.org/forwarded-for: "true"
spec:
  rules:
    - host: alpha-automl.hsrn.nyu.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # This is the name and port of your Service
                name: alpha-automl
                port:
                  number: 8000
